# gore

./: .gitignore  .gitmodules  CMakeLists.txt  main.c  main.cpp
gore/: CMakeLists.txt
gore/include/: glu.h  gore.h  json.h  macros.h  maths.h  model.h  stl.h
gore/include/glad/: glad.h
gore/src/: glad.c  glu.cpp  gore.cpp  model.cpp
mortar/: CMakeLists.txt
mortar/include/: macros.h  mortar.h
mortar/src/: mortar.c
